--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,20 +1,20 @@
 {
     "Connecting": "Connecting",
-    "Loading Contacts": "Loading Contacts bixu!",
-    "Not connected (check connection)": "Not connected (check connection) malandro",
-    "Message": "Message|",
-    "Conversation": "Conversation|",
-    "Favorites": "Favorites|",
-    "Recent": "Recent|",
-    "Today": "Today|",
-    "Last %s": "Last %s|",
-    "Monday": "Monday|",
-    "Tuesday": "Tuesday|",
-    "Wednesday": "Wednesday|",
-    "Thursday": "Thursday|",
-    "Friday": "Friday|",
-    "Saturday": "Saturday|",
-    "Sunday": "Sunday|",
+    "Loading Contacts": "Loading Contacts",
+    "Not connected (check connection)": "Not connected (check connection)",
+    "Message": "Message",
+    "Conversation": "Conversation",
+    "Favorites": "Favorites",
+    "Recent": "Recent",
+    "Today": "Today",
+    "Last %s": "Last %s",
+    "Monday": "Monday",
+    "Tuesday": "Tuesday",
+    "Wednesday": "Wednesday",
+    "Thursday": "Thursday",
+    "Friday": "Friday",
+    "Saturday": "Saturday",
+    "Sunday": "Sunday",
     "Notifications": "",
     "Details": "",
     "Add new conversation": "",
@@ -27,21 +27,72 @@
     "Leave conversation": "",
     "Really leave conversation?": "",
     "Really leave conversation?": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
+    "Hide YakYak": "",
+    "Open Inspector": "",
+    "Logout": "",
+    "Quit": "",
+    "Undo": "",
+    "Redo": "",
+    "Paste": "",
+    "Cut": "",
+    "Copy": "",
+    "Select All": "",
+
+
+
+    "About YakYak": "About YakYak",
+    "Hide YakYak": "Hide YakYak",
+    "Hide Others": "Hide Others",
+    "Open Inspector": "Open Inspector",
+    "Logout": "Logout",
+    "Quit": "Quit",
+    "Conversation List": "Conversation List",
+    "Show Thumbnails": "Show Thumbnails",
+    "Show Thumbnails Only": "Show Thumbnails Only",
+    "Show Animated Thumbnails": "Show Animated Thumbnails",
+    "Show Conversation Timestamp": "Show Conversation Timestamp",
+    "Show Conversation Last Message": "Show Conversation Last Message",
+    "Pop-Up Notification": "Pop-Up Notification",
+    "Show notifications": "Show notifications",
+    "Show message in notifications": "Show message in notifications",
+    "Show username in notifications": "Show username in notifications",
+    "Disable sound in notifications": "Disable sound in notifications",
+    "Use YakYak custom sound for notifications": "Use YakYak custom sound for notifications",
+    "Convert text to emoji": "Convert text to emoji",
+    "Color Scheme": "Color Scheme",
+    "Default": "Default",
+    "Blue": "Blue",
+    "Dark": "Dark",
+    "Material": "Material",
+    "Font Size": "Font Size",
+    "Extra Small": "Extra Small",
+    "Small": "Small",
+    "Medium": "Medium",
+    "Large": "Large",
+    "Extra Large": "Extra Large",
+    "Previous Conversation": "Previous Conversation",
+    "Next Conversation": "Next Conversation",
+    "Select Conversation": "Select Conversation",
+    "Conversation 1": "Conversation 1",
+    "Conversation 2": "Conversation 2",
+    "Conversation 3": "Conversation 3",
+    "Conversation 4": "Conversation 4",
+    "Conversation 5": "Conversation 5",
+    "Conversation 6": "Conversation 6",
+    "Conversation 7": "Conversation 7",
+    "Conversation 8": "Conversation 8",
+    "Conversation 9": "Conversation 9",
+    "Show tray icon": "Show tray icon",
+    "Escape key behavior": "Escape key behavior",
+    "Hides window": "Hides window",
+    "Clears input": "Clears input",
+    "(default when tray is not showing)": "(default when tray is not showing)",
+    "Hide Dock icon": "Hide Dock icon",
+    "Close": "Close",
+    "Bring All to Front": "Bring All to Front",
+    "YakYak": "YakYak",
+    "Edit": "Edit",
+    "View": "View",
+    "About": "About",
+    "Window": "Window"
 }
