reorder locale file

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,75 +1,97 @@
 {
+    "__MyLocaleLanguage__": "English",
     "Connecting": "Connecting",
     "Loading Contacts": "Loading Contacts",
     "Not connected (check connection)": "Not connected (check connection)",
+
     "Message": "Message",
+    "Show emoticons": "Show emoticons",
+    "Attach image": "Attach image",
+
+    "Conversations": "Conversations",
     "Conversation": "Conversation",
     "Favorites": "Favorites",
+    "Favorite": "Favorite",
     "Recent": "Recent",
-    "Today": "Today",
-    "Last %s": "Last %s",
-    "Monday": "Monday",
-    "Tuesday": "Tuesday",
-    "Wednesday": "Wednesday",
-    "Thursday": "Thursday",
-    "Friday": "Friday",
-    "Saturday": "Saturday",
-    "Sunday": "Sunday",
-    "Notifications": "",
-    "Details": "",
-    "Add new conversation": "",
-    "Conversation edit": "",
-    "Create multiuser chat": "",
-    "Delete conversation": "",
-    "OK": "",
-    "Cancel": "",
-    "New conversation": "",
-    "Leave conversation": "",
-    "Really leave conversation?": "",
-    "Really leave conversation?": "",
-    "Hide YakYak": "",
-    "Open Inspector": "",
-    "Logout": "",
-    "Quit": "",
-    "Undo": "",
-    "Redo": "",
-    "Paste": "",
-    "Cut": "",
-    "Copy": "",
-    "Select All": "",
+    "Notifications": "Notifications",
+    "Details": "Details",
 
+    "Add new conversation": "Add new conversation",
+    "New conversation": "New conversation",
+    "Conversation name": "Conversation name",
+    "Conversation edit": "Conversation edit",
+    "Create multiuser chat": "Create multiuser chat",
+    "Delete conversation": "Delete conversation",
+    "Really delete conversation?": "Really delete conversation?",
+    "Leave conversation": "Leave conversation",
+    "Really leave conversation?": "Really leave conversation?",
+    "Search people": "Search people",
+    "OK": "OK",
+    "Cancel": "Cancel",
 
+    "Menu": "Menu",
+
+    "YakYak": "YakYak",
+    "Edit": "Edit",
+    "View": "View",
+    "About": "About",
+    "Window": "Window",
+
+    "Open Inspector": "Open Inspector",
+    "Logout": "Logout",
+    "Quit": "Quit",
 
     "About YakYak": "About YakYak",
     "Hide YakYak": "Hide YakYak",
     "Hide Others": "Hide Others",
-    "Open Inspector": "Open Inspector",
-    "Logout": "Logout",
-    "Quit": "Quit",
+    "Minimize": "Minimize",
+    "Show All": "Show All",
+    "Close": "Close",
+    "Bring All to Front": "Bring All to Front",
+
+    "Undo": "Undo",
+    "Redo": "Redo",
+    "Paste": "Paste",
+    "Cut": "Cut",
+    "Copy": "Copy",
+    "Select All": "Select All",
+
     "Conversation List": "Conversation List",
     "Show Thumbnails": "Show Thumbnails",
     "Show Thumbnails Only": "Show Thumbnails Only",
     "Show Animated Thumbnails": "Show Animated Thumbnails",
     "Show Conversation Timestamp": "Show Conversation Timestamp",
     "Show Conversation Last Message": "Show Conversation Last Message",
+
     "Pop-Up Notification": "Pop-Up Notification",
     "Show notifications": "Show notifications",
     "Show message in notifications": "Show message in notifications",
     "Show username in notifications": "Show username in notifications",
     "Disable sound in notifications": "Disable sound in notifications",
+    "Show user avatar icon in notifications": "Show user avatar icon in notifications",
+    "Show YakYak icon in notifications": "Show YakYak icon in notifications",
     "Use YakYak custom sound for notifications": "Use YakYak custom sound for notifications",
+
     "Convert text to emoji": "Convert text to emoji",
+
     "Color Scheme": "Color Scheme",
     "Default": "Default",
     "Blue": "Blue",
     "Dark": "Dark",
     "Material": "Material",
+
     "Font Size": "Font Size",
     "Extra Small": "Extra Small",
     "Small": "Small",
     "Medium": "Medium",
     "Large": "Large",
     "Extra Large": "Extra Large",
+
+    "Toggle Fullscreen": "Toggle Fullscreen",
+    "Zoom in": "Zoom in",
+    "Zoom out": "Zoom out",
+    "Actual size": "Actual size",
+
     "Previous Conversation": "Previous Conversation",
     "Next Conversation": "Next Conversation",
     "Select Conversation": "Select Conversation",
@@ -82,17 +104,14 @@
     "Conversation 7": "Conversation 7",
     "Conversation 8": "Conversation 8",
     "Conversation 9": "Conversation 9",
+
     "Show tray icon": "Show tray icon",
+
     "Escape key behavior": "Escape key behavior",
+
     "Hides window": "Hides window",
     "Clears input": "Clears input",
-    "(default when tray is not showing)": "(default when tray is not showing)",
+    "default when tray is not showing": "default when tray is not showing",
+
     "Hide Dock icon": "Hide Dock icon",
-    "Close": "Close",
-    "Bring All to Front": "Bring All to Front",
-    "YakYak": "YakYak",
-    "Edit": "Edit",
-    "View": "View",
-    "About": "About",
-    "Window": "Window"
 }
