working with menu entry

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -113,5 +113,5 @@
     "Clears input": "Clears input",
     "default when tray is not showing": "default when tray is not showing",
 
-    "Hide Dock icon": "Hide Dock icon",
+    "Hide Dock icon": "Hide Dock icon"
 }
