en-Bixu.json is just a testing language
it must be removed before merging

--- a/src/locales/en-Bixu.json
+++ b/src/locales/en-Bixu.json
@@ -1,5 +1,5 @@
 {
-    "__MyLocaleLanguage__": "Bixu!",
+    "__MyLocaleLanguage__": "English Bixu!",
     "Connecting": "Connecting -- bixu!",
     "Loading Contacts": "Loading Contacts -- bixu!",
     "Not connected (check connection)": "Not connected (check connection) -- bixu!",
