--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -13,7 +13,7 @@
     "Favorites": "Favoritos",
     "Favorite": "Favorito",
     "Recent": "Recente",
-    "Notifications": "Notificalões",
+    "Notifications": "Notificações",
     "Details": "Detalhes",
 
     "Add new conversation": "Adicionar nova conversa",
