--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -36,6 +36,7 @@
     "View": "View",
     "About": "About",
     "Window": "Window",
+    "Help": "Help",
 
     "Open Inspector": "Open Inspector",
     "Logout": "Logout",
