--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -36,6 +36,7 @@
     "View": "Ver",
     "About": "Sobre",
     "Window": "Window",
+    "Help": "Ajuda",
 
     "Open Inspector": "Abrir Inspector",
     "Logout": "Terminar sessão",
