adds is typing i18n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,7 @@
     "Message": "Message",
     "Show emoticons": "Show emoticons",
     "Attach image": "Attach image",
+    "is typing": "is typing",
 
     "Conversations": "Conversations",
     "Conversation": "Conversation",
