--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -7,6 +7,7 @@
     "Message": "Mensagem",
     "Show emoticons": "Mostrar emoji",
     "Attach image": "Anexar imagem",
+    "is typing": "está a escrever",
 
     "Conversations": "Conversas",
     "Conversation": "Conversa",
