added the french translation credit: @Fredouye

--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,5 +1,6 @@
 {
     "__MyLocaleLanguage__": "Português",
+    "__maintaner__": "@averissimo",
     "Connecting": "A Ligar",
     "Loading Contacts": "Carregar Contactos",
     "Not connected (check connection)": "Não Ligado (verifique a ligação)",
