--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,8 +1,8 @@
 {
     "__MyLocaleLanguage__": "Français",
-    "__maintaner__": "@Fredouye",
+    "__maintaner__": "http://github/Fredouye",
 
-    "Language:": "Language",
+    "Language": "Langue (Language)",
 
     "Connecting": "Connexion",
     "Loading Contacts": "Chargement des contacts",
