--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,8 +1,8 @@
 {
     "__MyLocaleLanguage__": "Português",
-    "__maintaner__": "@averissimo",
+    "__maintaner__": "http://github/averissimo",
 
-    "Language:": "Idioma (Language)",
+    "Language": "Idioma (Language)",
 
     "Connecting": "A Ligar",
     "Loading Contacts": "Carregar Contactos",
