--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,7 @@
     "__MyLocaleLanguage__": "English",
     "__maintaner__": "YakYak",
 
-    "Language:": "Idioma (Language)",
+    "Language": "Language",
 
     "Connecting": "Connecting",
     "Loading Contacts": "Loading Contacts",
